AC_INIT([MegaMimes], [1.0.0], [okessuman@st.ug.edu.gh])
AC_PREREQ([2.64])
AC_CONFIG_SRCDIR([src/MegaMimes.c])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_AUX_DIR([build-aux])
AC_ENABLE_SHARED
AC_ENABLE_STATIC

AM_PROG_AR
AC_PROG_LIBTOOL
LT_INIT

AM_INIT_AUTOMAKE([-Wall -Werror subdir-objects ])
AC_CONFIG_FILES([Makefile])
AC_PROG_CC
AC_OUTPUT 
